--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <a href="https://github.com/Sharad-Raina/Walmart-Sales-Analysis-SQL" class="image fit">
                             <img src="images/waalmart.jpg" alt="" />
                         </a>
-                        <p>This case study explores Walmart's comprehensive approach to sales data analytics, showcasing how the retail giant leverages its vast data resources to optimize operations and enhance customer experience. The analysis covers various aspects of Walmart's business, from product performance to customer behavior, providing valuable insights into the company's data-driven decision-making process..</p>
+                        <p>This case study explores Walmart's comprehensive approach to sales data analytics, showcasing how the retail giant leverages its vast data resources to optimize operations and enhance customer experience. The analysis covers various aspects of Walmart's business, from product performance to customer behavior, providing valuable insights into the company's data-driven decision-making process.</p>
                         <ul class="actions special">
                             <li><a href="#" class="button">View Project</a></li>
                         </ul>
